src/test/resources/compiler/parser/input/pass/damplistalloption.rule
pre -> +post1 action [,,].