src/test/resources/compiler/parser/input/fail/pos_and_goal.rule
pre -> +post2 #post1 action.